# emokit

./: CMakeLists.txt
examples/contact/: contact.c
examples/emokit_osc/: emokit_osc.cpp
python/emokit/: emotiv.py
src/: CMakeLists.txt  emokit.c  emokit.h
